@@ -1,5 +1,6 @@
 0.30_dev
 -center display frame.
+-revise rect move and union methods.
 -update for python 2/3 compatibility.
 
 0.29    2021-04-06
